Changes in version 0.6
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 40: Rewrote the documentation as manual pages and removed the
  previous GNU Info document.

* Issue 36: Changed 'kyua help' to not fail when the configuration file
  is bogus.  Help should always work.

* Increased the granularity of the error codes returned by kyua(1) to
  denote different error conditions.  This avoids the overload of '1'
  to indicate both "expected" errors from specific subcommands from
  unexpected errors caused by the internals of the code.  The manual
  now correctly explain how the exit codes behave on a command basis.

* Issue 47: Started using the independent testers in the kyua-testers
  package to run the test cases.  Kyua does not implement the logic to
  invoke test cases any more, which provides for better modularity,
  extensibility and robustness.

* Optimized the database schema to make report generation almost
  instantaneous.

* Bumped the database schema to 2.  The database now records the
  metadata of both test programs and test cases generically, without
  knowledge of their interface.

* Added the 'db-migrate' command to provide a mechanism to upgrade a
  database with an old schema to the current schema.

* Removed the GDB build-time configuration variable.  This is now part
  of the kyua-testers package.


Changes in version 0.5
======================

Experimental version released on July 10th, 2012.

* Issue 15: Added automatic stacktrace gathering of crashing test cases.
  This relies on GDB and is a best-effort operation.

* Issue 32: Added the '--build-root' option to the debug, list and test
  commands.  This allows executing test programs from a different
  directory than where the Kyuafile scripts live.  See the 'Build roots'
  section in the manual for more details.

* Issue 33: Removed the kyuaify.sh script.  This has been renamed to
  atf2kyua and moved to the kyua-atf-compat module, where it ships as a