@@ -9,6 +9,8 @@ STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 * Issue 36: Changed 'kyua help' to not fail when the configuration file
   is bogus.  Help should always work.
 
+* Issue 39: Added per-test-case metadata values to the HTML reports.
+
 * Increased the granularity of the error codes returned by kyua(1) to
   denote different error conditions.  This avoids the overload of '1'
   to indicate both "expected" errors from specific subcommands from
